--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
             <!-- Main Image Section -->
         </div class="main-image">
-            <img src="main-image.png" alt="Escape Room Main Image" style="height: 60px;">>
-        </div class="main-image">
+        <img src="main-image.png" alt="Escape Room Main Image" style="height: 60px;">>
+    </div class="main-image">
 
-            <!-- Button Section -->
-            <div class="buttons top">
-                <button>On-site challenges</button>
-                <button>online challenges</button>
-                <div class="buttons top">
+    <!-- Button Section -->
+    <div class="buttons top">
+        <button>On-site challenges</button>
+        <button>online challenges</button>
+        <div class="buttons top">
 
             <!-- revew Section -->
             <div>
@@ -38,16 +38,19 @@
             <!-- Challenges Section -->
             <div>
                 <div>
-                    <img src="main-image.png" alt="Escape Room Main Image" style="height: 60px;">>
+                    <img src="main-image.png" alt="Escape Room Main Image" style="height: 60px;">
                     <p><strong>Title of room (on-site)</strong></p>
                     <p>★★★★☆</p>
                     <p>2-6 participants</p>
                     <button>Book this room</button>
                 </div>
                 <div>
-                    <img src="main-image.png" alt="Escape Room Main Image" style="height: 60px;">>
+                    <img src="main-image.png" alt="Escape Room Main Image" style="height: 60px;">
                     <p><strong>Title of room (on-site)</strong></p>
-                    <p>★★★★☆</p>
+                    <img src="star_full.png" alt="one star full"> <img src="star_full.png" alt="one star full"> <img
+                        src="star_full.png" alt="one star full"> <img src="star_full.png" alt="one star full"> <img
+                        src="Star_empty.png" alt="empty star">
+
                     <p>2-6 participants</p>
                     <button>Book this room</button>
                 </div>
