html mobile done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <div>
                     <img src="main-image.png" alt="Escape Room Main Image" style="height: 60px;">
                     <p><strong>Title of room (on-site)</strong></p>
-                    <p>★★★★☆</p>
+                    <img src="star_full.png" alt="one star full"> <img src="star_full.png" alt="one star full"> <img
+                    src="star_full.png" alt="one star full"> <img src="star_full.png" alt="one star full"> <img
+                    src="Star_empty.png" alt="empty star">
+
                     <p>2-6 participants</p>
                     <button>Book this room</button>
                 </div>
@@ -88,20 +91,27 @@
                 <p><strong>ESC Hacker Escape Rooms</strong></p>
                 <p>Quodsi haberent magnalia inter potentiam et divitias, et non illam quidem haec eo spectant haec
                     quoque vos omnino desit illud quo solo felicitas libertatisque perficiuntur.</p>
-                <p>
-                    <a href="#">Site map</a> |
-                    <a href="#">The Story</a> |
-                    <a href="#">Contact Us</a> |
-                    <a href="#">Legal</a> |
-                    <a href="#">Play online</a> |
-                    <a href="#">Play on-site</a>
-                </p>
-                <div>
-                    <a href="#"><img src="facebook.png" alt="Facebook" style="width: 24px;"></a>
-                    <a href="#"><img src="instagram.png" alt="Instagram" style="width: 24px;"></a>
-                    <a href="#"><img src="twitter.png" alt="Twitter" style="width: 24px;"></a>
-                </div>
+
+                <ul>
+                    <p>Site map
+                        <li>The Story</li>
+                        <li>Contact Us</li>
+                        <li>Legal</li>
+
+                        <li>Play online</li>
+                        <li>Play on-site</li>
+
+                    </p>
+                </ul>
+                <ul>
+                    <p>Follow us on
+                        <li>Facebook</li>
+                        <li>Instagram</li>
+                        <li>Twitter</li>
+                    </p>
+                </ul>
             </div>
+        </div>
 
 </body>
 
