--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button>online challenges</button>
         <div class="buttons top">
 
-            <!-- revew Section -->
+            <!-- review Section -->
             <div>
                 <img src="user-avatar.png" alt="User Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
                 <p><em>"This is a quote about how amazing this place is and how much fun me and my friends had when we
@@ -69,7 +69,7 @@
                 <button>Read the full story</button>
             </div>
 
-            <!-- CTA Section -->
+            <!-- info Section -->
             <div>
                 <img src="main-image.png" alt="Escape Room Main Image" style="height: 60px;">>
                 <h2>Play with your friends or build your team stronger at work</h2>
