--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
             </section>
 
             <!-- info Section -->
-            <div class="info-section">
-                <img src="nesa-by-makers-IgUR1iX0mqM-unsplash 1.png" alt="Escape Room Main Image"class="info-image">
+            <div class="info-section_1">
+                <img src="nesa-by-makers-IgUR1iX0mqM-unsplash_1.png" alt="Escape Room Main Image"class="info-image">
                 <h2>Play with your friends or build your team stronger at work</h2>
                 <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil invitam. Nemo nocere tibi
                     erit, et non inimicos, et</p>
                     <button class="book_on_site_today_button">Book on-site today</button>
             </div>
 
-            <div>
-                <img src="kelly-sikkema-YK0HPwWDJ1I-unsplash 1.png" alt="Escape Room Main Image">
+            <div class="info-section_2">
+                <img src="kelly-sikkema-YK0HPwWDJ1I-unsplash_1.png" alt="Escape Room Main Image">
                 <h2>Play online or visit our venue for one of our 25 escape rooms</h2>
                 <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil invitam. Nemo nocere tibi
                     erit, et non inimicos, et</p>
@@ -142,7 +142,7 @@
             <!-- Footer Section -->
       <footer class="footer">
         <div class="footer_content">
-          <section class="footer_about item1">
+          <section class="footer_about_item1">
             <h2 class="footer_title">[Esc] Hacker Escape Rooms</h1>
             <p class="footer_text">
               Quodsi haberent magnalia inter potentiam et divitias, et non illam
@@ -150,26 +150,26 @@
               solo felicitatis libertatisque perficiuntur.
             </p>
           </section>
-          <section class="footer_site-map item2">
-            <h2 class="footer_item big">Site map</li>
-            <ul class="footer_list">
-              <li class="footer_item">The Story</li>
-              <li class="footer_item">Contact Us</li>
-              <li class="footer_item">Legal</li>
+          <section class="footer_site-map_item2">
+            <h2 class="footer_item_site_map">Site map</h2>
+            <ul class="footer_list_contact">
+              <li class="footer_item_story">The Story</li>
+              <li class="footer_item_contact">Contact Us</li>
+              <li class="footer_item_legal">Legal</li>
             </ul>
-            <ul class="footer_list">
-              <li class="footer_item">Play online</li>
-              <li class="footer_item">Play on-site</li>
+            <ul class="footer_list_play">
+              <li class="footer_item_online">Play online</li>
+              <li class="footer_item_site">Play on-site</li>
             </ul>
           </section>
             
           </section>
-          <section class="footer_social item3">
-            <h2 class="footer_item big">Follow us on</h2>
-            <ul class="footer_list">
-              <li class="footer_item">Facebook</li>
-              <li class="footer_item">Twitter</li>
-              <li class="footer_item">Instagram</li>
+          <section class="footer_social">
+            <h2 class="footer_item_follow">Follow us on</h2>
+            <ul class="footer_list_social">
+              <li class="footer_item_facebook">Facebook</li>
+              <li class="footer_item_instagram">Instagram</li>
+              <li class="footer_item_twitter">Twitter</li>
             </ul>
           </section>
         </div>
