moblie version done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="challenges">
       <div class="challenge-card">
         <img src="main-image.png" alt="Escape Room Main Image" class="challenge-image">
-        <p>Title of room (on-site)</p>
+        <h3>Title of room (on-site)</h3>
         <div class="stars">
           <img src="star_full.png" alt="one star full">
           <img src="star_full.png" alt="one star full">
@@ -82,13 +82,13 @@
           <img src="star_full.png" alt="one star full">
           <img src="star_empty.png" alt="empty star">
         </div>
-        <p>2-6 participants</p>
+        <h5>2-6 participants</h5>
         <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
         <button class="secondary-button">Book this room</button>
       </div>
       <div class="challenge-card">
         <img src="main-image.png" alt="Escape Room Main Image" class="challenge-image">
-        <p>Title of room (on-site)</p>
+        <h3>Title of room (on-site)</h3>
         <div class="stars">
           <img src="star_full.png" alt="one star full">
           <img src="star_full.png" alt="one star full">
@@ -96,13 +96,13 @@
           <img src="star_full.png" alt="one star full">
           <img src="star_empty.png" alt="empty star">
         </div>
-        <p>2-6 participants</p>
+        <h5>2-6 participants</h5>
         <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
         <button class="secondary-button">Book this room</button>
       </div>
       <div class="challenge-card">
         <img src="main-image.png" alt="Escape Room Main Image" class="challenge-image">
-        <p>Title of room (on-site)</p>
+        <h3>Title of room (on-site)</h3>
         <div class="stars">
           <img src="star_full.png" alt="one star full">
           <img src="star_full.png" alt="one star full">
@@ -110,7 +110,7 @@
           <img src="star_full.png" alt="one star full">
           <img src="star_empty.png" alt="empty star">
         </div>
-        <p>2-6 participants</p>
+        <h5>2-6 participants</h5>
         <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
         <button class="secondary-button">Book this room</button>
       </div>
