--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="review">
         <img src="user-avatar.png" alt="User Avatar" class="review-avatar">
       <div class="review_text">
-      <p><em>"This is a quote about how amazing this place is and how much fun me and my friends had when we tried
-          it."</em></p>
+      <h5><em>This is a quote about how amazing this place is and how much fun me and my friends had when we tried
+          it</em></h5>
       <p>John Doe, visited us in September 2021</p>
     </div>
     </div>
@@ -61,8 +61,8 @@
     <div class="review">
       <img src="user-avatar.png" alt="User Avatar" class="review-avatar">
     <div class="review_text">
-    <p><em>"Another testimonial about how fun the challenges were and how we couldn´t stop talking about it after the
-        experience."</em></p>
+      <h5><em>This is a quote about how amazing this place is and how much fun me and my friends had when we tried
+        it</em></h5>
     <p>Jane Doe, visited us in October 2022</p>
     </div>
     </div>
@@ -132,7 +132,7 @@
     <section class="story">
       <div class="story_container">
         <h2 class="story_intro">
-          Quodsi haberent magnalia inter potentiam et divitias, et non illam quidem haec eo spectant haec quoque vos
+          Quodsi haberent magnalia inter potentiam et divitias et non illam quidem haec eo spectant haec quoque vos
           omnino desit illud quo solo felicitas libertatisque perficiuntur.
         </h2>
         <a href="#full-story" class="story_btn">Read the full story</a>
@@ -149,8 +149,8 @@
     </div>
 
     <div class="info-section_2">
-      <img src="kelly-sikkema-YK0HPwWDJ1I-unsplash_1.png" alt="Escape Room Main Image">
-      <h2 class="section2">Play online or visit our venue for one of our 25 escape rooms</h2>
+      <img src="kelly-sikkema-YK0HPwWDJ1I-unsplash_1.png" alt="Escape Room Main Image" class="computer_karen">
+      <h2 class="section2">Play online or visit our venue for one of our 25 escape rooms</h2> 
       <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil invitam. Nemo nocere tibi
         erit, et non inimicos, et</p>
       <button class="see_all_the_challenges_button">See all the challenges</button>
@@ -162,7 +162,7 @@
         <section class="footer_about_item1">
           <h2 class="footer_title">[Esc] Hacker Escape Rooms</h1>
             <p class="footer_text">
-              Quodsi haberent magnalia inter potentiam et divitias, et non illam
+              Quodsi haberent magnalia inter potentiam et divitias et non illam
               quidem haec eo spectant haec quoque vos omnino desit illud quo
               solo felicitatis libertatisque perficiuntur.
             </p>
