--- a/index.html
+++ b/index.html
@@ -141,20 +141,27 @@
 
     <!-- info Section -->
     <div class="info-section_1">
+    <div class="info-section_1_img">
       <img src="nesa-by-makers-IgUR1iX0mqM-unsplash_1.png" alt="Escape Room Main Image" class="info-image">
+    </div>
+      <div class="info-section_1_text">
       <h2 class="section1">Play with your friends or build your team stronger at work</h2>
       <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil invitam. Nemo nocere tibi
         erit, et non inimicos, et</p>
       <button class="book_on_site_today_button">Book on-site today</button>
     </div>
-
+    </div>
     <div class="info-section_2">
+    <div class="info-section_2_img">
       <img src="kelly-sikkema-YK0HPwWDJ1I-unsplash_1.png" alt="Escape Room Main Image" class="computer_karen">
+    </div>
+      <div class="info-section_2_text">
       <h2 class="section2">Play online or visit our venue for one of our 25 escape rooms</h2> 
       <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil invitam. Nemo nocere tibi
         erit, et non inimicos, et</p>
       <button class="see_all_the_challenges_button">See all the challenges</button>
     </div>
+  </div>
 
     <!-- Footer Section -->
     <footer class="footer">
