--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <script src="main.js"></script>
 
   <!-- Header Section -->
   <header class="header">
@@ -27,7 +28,24 @@
         <h1>Hacker Escape Rooms</h1>
       </div>
     </div>
+    <button id="navigation" aria-label="navigation">
+      <img src="menu (1).png" alt="navigation icon">
+  </button>
   </header>
+
+  <div id="popup-container" class="popup-container">
+    <div id="popup-menu" class="popup-menu">
+      <button id="close-popup" class="close-popup" aria-label="Close popup">
+        <img src="close.png" alt="Close popup">
+      </button>
+      <ul>
+        <li><a href="#online-challenges">Play online</a></li>
+        <li><a href="#onsite-challenges">Play On-site</a></li>
+        <li><a href="#story">The Story</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+      </ul>
+    </div>
+  </div>
 
   <!-- Main Image Section -->
   <main class="main">
@@ -36,7 +54,7 @@
         <img class="main-image-img" src="main-image.png" alt="Hacker solving a coding problem to escape the room">
       </div>
     </div>
-
+    
     <!-- Button Section -->
     <div class="main_btns">
       <div class="main_btns-item">
