fixed shit and structured css

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <h1>Hacker Escape Rooms</h1>
       </div>
     </div>
-    <button id="navigation" aria-label="navigation">
-      <img src="menu (1).png" alt="navigation icon">
+    <button id="navigation" aria-label="Open navigation">
+      <img src="menu (1).png" alt="Menu">
   </button>
   </header>
 
-  <div id="popup-container" class="popup-container">
+  <div id="popup-container" class="popup-container hidden">
     <div id="popup-menu" class="popup-menu">
       <button id="close-popup" class="close-popup" aria-label="Close popup">
-        <img src="close.png" alt="Close popup">
+        <img src="close-icon.png" alt="Close">
       </button>
       <ul>
         <li><a href="#online-challenges">Play online</a></li>
@@ -139,10 +139,10 @@
     <!-- Button Section -->
     <div class="after_btns">
       <div class="after_btns-item">
-        <a href="#onsite-challenges" class="after_btn onsite">On-site challenges</a>
+        <a href="#onsite-challenges" class="after_btn_onsite">On-site challenges</a>
       </div>
       <div class="after_btns-item">
-        <a href="#online-challenges" class="after_btn online">Online challenges</a>
+        <a href="#online-challenges" class="after_btn_online">Online challenges</a>
       </div>
     </div>
 
@@ -170,14 +170,14 @@
     </div>
     </div>
     <div class="info-section_2">
+      <div class="info-section_2_text">
+        <h2 class="section2">Play online or visit our venue for one of our 25 escape rooms</h2> 
+        <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil invitam. Nemo nocere tibi
+          erit, et non inimicos, et</p>
+        <button class="see_all_the_challenges_button">See all challenges</button>
+      </div>
     <div class="info-section_2_img">
       <img src="kelly-sikkema-YK0HPwWDJ1I-unsplash_1.png" alt="Escape Room Main Image" class="computer_karen">
-    </div>
-      <div class="info-section_2_text">
-      <h2 class="section2">Play online or visit our venue for one of our 25 escape rooms</h2> 
-      <p>Praeterea, ex culpa non invenies unum aut non accusatis unum. Et nihil invitam. Nemo nocere tibi
-        erit, et non inimicos, et</p>
-      <button class="see_all_the_challenges_button">See all the challenges</button>
     </div>
   </div>
 
