--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div id="popup-container" class="popup-container hidden">
     <div id="popup-menu" class="popup-menu">
       <button id="close-popup" class="close-popup" aria-label="Close popup">
-        <img src="close-icon.png" alt="Close">
+        <img src="close.png" alt="Close">
       </button>
       <ul>
         <li><a href="#online-challenges">Play online</a></li>
